--- a/webserver/templates/webserver/index.html
+++ b/webserver/templates/webserver/index.html
@@ -49,7 +49,14 @@
             </div>
             <div class="flecha"></div>
         </div>
-        
+        <div class="microfono">
+            <div class="olas">
+                <div class="ola ola1"></div>
+                <div class="ola ola2"></div>
+                <div class="ola ola3"></div>
+                <div class="ola ola4"></div>
+            </div>
+        </div>
         <script src="{% static 'webserver/script.js' %}"></script>
     </body>
 </html>
