Se activo el envio y recibo de comandoz por voz
- Aun no se actualiza la respuesta al comando en la web
- El frontend del microfono esta terminado

--- a/webserver/templates/webserver/index.html
+++ b/webserver/templates/webserver/index.html
@@ -50,12 +50,14 @@
             <div class="flecha"></div>
         </div>
         <div class="microfono">
+            
             <div class="olas">
                 <div class="ola ola1"></div>
                 <div class="ola ola2"></div>
                 <div class="ola ola3"></div>
                 <div class="ola ola4"></div>
             </div>
+            <div class="mic"></div>
         </div>
         <script src="{% static 'webserver/script.js' %}"></script>
     </body>
