--- a/webserver/static/webserver/style.css
+++ b/webserver/static/webserver/style.css
@@ -234,6 +234,7 @@ input[type="checkbox"]:checked + .toggle-label {
     overflow: visible;
     display: block;
 }
+
 .microfono{
     margin-bottom: 20px;
     padding-right: 20px;
@@ -241,16 +242,65 @@ input[type="checkbox"]:checked + .toggle-label {
     height: 100px;
     display: flex;
     justify-content: end;
+    align-items: center;
 }
+
+.mic {
+    box-sizing: border-box;
+    position: absolute;
+    display: block;
+    transform: scale(var(--ggs,1));
+    width: 32px;
+    height: 24px;
+    border-bottom-left-radius: 120px;
+    border-bottom-right-radius: 120px;
+    border: 2px solid;
+    border-color: white;
+    border-top: 0;
+    margin-top: 3px;
+    margin-right: 30px;
+    
+}
+
+.mic::after,
+.mic::before {
+    
+    content: "";
+    display: block;
+    box-sizing: border-box;
+    position: absolute
+}
+
+.mic::after {
+    border: 2px solid white;
+    width: 16px;
+    height: 32px;
+    left: 6px;
+    top: -14px;
+    border-radius: 10px
+}
+
+.mic::before {
+    width: 20px;
+    height: 15px;
+    top: 18px;
+    left: 3px;
+    border-right: 9px solid transparent;
+    box-shadow:
+    0px 2px white,
+    inset -2px 0 white;
+} 
+
 .olas{
     margin: 0;
     padding: 0;
     position: relative;
-    width: 400px;
+    width: 100px;
     height: 100px;
     background: #0d2953;
     border-radius: 60px;
     overflow: hidden;
+    transition: width 0.3s ease-in-out;
 }
 
 .olas::before, .olas::after{
@@ -261,7 +311,7 @@ input[type="checkbox"]:checked + .toggle-label {
     border-radius: 50%;
 }
 
-.olas .ola{
+.microfono .olas .ola{
     position: absolute;
     bottom: 0;
     left: 0;
@@ -269,6 +319,8 @@ input[type="checkbox"]:checked + .toggle-label {
     height: 40px;
     background: url(images/wave.png);
     background-size: 300px 40px;
+    overflow: hidden;
+    display: none;
 }
 
 .olas .ola.ola1{
@@ -321,4 +373,15 @@ input[type="checkbox"]:checked + .toggle-label {
     }
 }
 
+.microfono.grabando .olas .ola{
+    display: block;
+}
 
+.microfono.grabando .mic{
+    display: none;
+}
+
+.microfono.grabando .olas{
+    width: 400px;
+    transition: width 0.3s ease-in-out;
+}
