--- a/webserver/static/webserver/style.css
+++ b/webserver/static/webserver/style.css
@@ -64,8 +64,35 @@ svg {
     left: 0;
 }
 
-        
-.toggle-container {
+.botones-contenedor{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 150;
+    width: 400px;
+}
+
+.luz-container{
+    margin: 30px;
+    width: 150px;
+    height: 150px;
+}
+
+.ball{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white; /* color del texto */
+    font-size: 28px; /* tamaño de fuente */
+    text-align: center; /* alineación del texto */
+    transition: background-color 0.3s ease, transform 0.3s ease-out;
+    border-radius:50%;
+    width: 100px;
+    height:100px;
+}
+
+.toggle-container{
     position: relative;
     display: flex;
     align-items: center;
@@ -97,7 +124,7 @@ input[type="checkbox"] {
     visibility: hidden;
 }
 
-input[type="checkbox"]:not(:checked) + .toggle-label {
+input[type="checkbox"]:not(:checked) + .toggle-label, input[type="checkbox"]:not(:checked) + .ball {
     background-color: rgb(27, 53, 80);
     transform: scale(1.1);
 }
@@ -108,6 +135,11 @@ input[type="checkbox"]:checked + .toggle-label {
     box-shadow: inset -25px 10px 0px -10px #03a9f4;
 }
 
+input[type="checkbox"]:checked + .ball {
+    color: transparent;
+    background-color: orange;
+    box-shadow: 0 0 35px 5px yellow,0 0 25px 10px yellow inset
+}
 
 
 .formRiego{
